<resources>
    <string name="app_name">Word Ladder</string>
    <string name="new_puzzle">New puzzle…</string>
    <string name="hints">Hints</string>
    <string name="text_word_length">Word length</string>
    <string name="text_ladder_length">Ladder steps</string>
    <string name="text_start_word">Start word (optional)</string>
    <string name="text_end_word">End word (optional)</string>
    <string name="text_cancel">Cancel</string>
    <string name="text_create">Create</string>
    <string name="hint_word_length">Select word length</string>
    <string name="hint_ladder_length">Select ladder steps</string>
    <string name="empty_text_solutions">(number of solutions)</string>
    <string name="actionbar_title_create">Word Ladder - New Puzzle</string>
    <string name="actionbar_title_help">Word Ladder - Help and About</string>
    <string name="actionbar_title_word_lookup">Word Ladder - Word lookup</string>
    <string name="help">Help and About…</string>
    <string name="help_1">Word Ladder Help</string>
    <string name="help_wkipedia_link">https://en.wikipedia.org/wiki/Word_ladder</string>
    <string name="help_2">The objective of the puzzle is to convert one word to another - at each step you can change only one letter and each word must be a valid word.</string>
    <string name="help_3">Dictionary</string>
    <string name="help_4">The built-in dictionary is based on the Official Collins Scrabble Words (2024)\nIt contains <b><i>280887</i></b> words and this app can generate over <b><i>1.5 million</i></b> different puzzles.</string>
    <string name="help_5">With <b><i>Hints</i></b> turned on (see menu) the app will give you some help in finding the word for each step. Use the keyboard buttons...</string>
    <string name="help_6">to fill in the entire word that could fit at the current step.</string>
    <string name="help_6a">(on a letter) tips will appear to suggest what letter(s) can be at that position in the word.</string>
    <string name="help_7">(on an empty step) to display which letter positions can be changed.</string>
    <string name="help_8">Entering words</string>
    <string name="help_9">Use the keyboard to enter a word at each step.  Tap to the left or right of each step edit to nudge the selected character</string>
    <string name="help_5a">With <b><i>Hints</i></b> turned on you will also be able to see all of the possible solutions found.</string>
    <string name="help_5b"><i>Note that using these <b>Hints</b> will aggressively deduct from your overall score and looking at possible solutions will wipe out your current score.</i></string>
    <string name="help_10">Word meanings</string>
    <string name="help_11">To find the meaning of a word use the <b><i>Word lookup…\</i></b> option from the menu.</string>
    <string name="help_11a">Hold finger down on any word entry, start word, end word or solution word display to show the meaning of that word.</string>
    <string name="word_lookup">Word lookup…</string>
    <string name="high_scores">High Scores…</string>
    <string name="key_label_backspace">⌫</string>
    <string name="key_label_prev">Prev</string>
    <string name="key_label_clear">Clear</string>
    <string name="key_label_suggest">Fill</string>
    <string name="key_label_hint">Hint</string>
    <string name="key_label_lookup">Lookup</string>
    <string name="key_label_next">Next</string>
    <string name="key_label_cursor_next">&gt;</string>
    <string name="key_label_cursor_prev">&lt;</string>
    <!--    <string name="bs">\u21e6 \u2190 \u2b60 \u21d0 ⌫</string> -->

</resources>