<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="16sp"
            android:paddingTop="8sp"
            android:paddingRight="16sp"
            android:paddingBottom="8sp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="About"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autoLink="web"
                android:text="Another bit of bit shuffling by Martin &quot;Marrow&quot; Rowlinson"
                android:textSize="20sp" />
            <Space
                android:layout_width="match_parent"
                android:layout_height="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/help_1"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autoLink="web"
                android:text="@string/help_wkipedia_link"
                android:textSize="20sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/help_2"
                android:textSize="20sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="16sp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/help_4"
                android:textSize="20sp" />
            <Space
                android:layout_width="match_parent"
                android:layout_height="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hints"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/help_5"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginLeft="8sp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:background="@drawable/key_background"
                    android:paddingLeft="10sp"
                    android:paddingTop="2dp"
                    android:paddingRight="10sp"
                    android:paddingBottom="2dp"
                    android:text="@string/key_label_hint"
                    android:textAlignment="center"
                    android:textSize="20sp" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4sp"
                    android:text="@string/help_6a"
                    android:textSize="20sp" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginLeft="8sp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:background="@drawable/key_background"
                    android:paddingLeft="10sp"
                    android:paddingTop="2dp"
                    android:paddingRight="10sp"
                    android:paddingBottom="2dp"
                    android:text="@string/key_label_hint"
                    android:textAlignment="center"
                    android:textSize="20sp" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4sp"
                    android:text="@string/help_7"
                    android:textSize="20sp" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginLeft="8sp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:background="@drawable/key_background"
                    android:paddingLeft="10sp"
                    android:paddingTop="2dp"
                    android:paddingRight="10sp"
                    android:paddingBottom="2dp"
                    android:text="@string/key_label_suggest"
                    android:textAlignment="center"
                    android:textSize="20sp" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4sp"
                    android:text="@string/help_6"
                    android:textSize="20sp" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4sp"
                android:text="@string/help_5a"
                android:textSize="20sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4sp"
                android:text="@string/help_5b"
                android:textSize="20sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/help_8"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/help_9"
                android:textSize="20sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/help_10"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/help_11"
                android:textSize="20sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/help_11a"
                android:textSize="20sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="16sp" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>